--- a/BeatsTest/.project
+++ b/BeatsTest/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>BeatsPersistence</name>
+	<name>BeatsTest</name>
 	<comment></comment>
 	<projects>
 	</projects>
