--- a/BeatsTest/.classpath
+++ b/BeatsTest/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/BeatsDomain"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/BeatsPersistance"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="lib" path="/Users/nathanhester/mysql-connector-java-8.0.16/mysql-connector-java-8.0.16.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-8.0.16.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
