--- a/BeatsTest/.classpath
+++ b/BeatsTest/.classpath
@@ -2,9 +2,8 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/BeatsDomain"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-8.0.16.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/BeatsPersistence"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/BeatsController"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
